queries apparte quelle relative al biglietto